<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="how_was">How was the service?</string>
    <string name="cost">Cost of Service</string>
    <string name="amazing">Amazing (20%)</string>
    <string name="good">Good (18%)</string>
    <string name="ok">OK (15%)</string>
    <string name="round">Round up tip?</string>
    <string name="calc">Calculate</string>
    <string name="tip_amount">Tip Amount: %s</string>
</resources>